2017-10-07         Andrew J. Schorr     <ajschorr@fedoraproject.org>

	* gawk-pgsql.spec.in: Change email address in changelog.

2016-07-30         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* gawk-pgsql.spec.in: Use %{url} in Source0.

2016-07-23         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* gawk-pgsql.spec.in: Upgrade to Fedora standards.

2016-07-22         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* gawk-pgsql.spec.in: Fix some rpmlint complaints.

2014-11-02         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* Makefile.am: Now a symbolic link to shared/packaging.makefile.

2014-10-30         Andrew J. Schorr     <aschorr@telemetry-investments.com>
	
	This is now a separate package.