@@ -1,63 +1,78 @@
-Name:		@PACKAGE@
-Summary:	PostgreSQL library for gawk
-Version:	@VERSION@
-Release:	1%{?dist}
-License:	GPLv3+
-Group:		Development/Libraries
-URL:		http://sourceforge.net/projects/gawkextlib
-Source0:	%{url}/files/%{name}-%{version}.tar.gz
-BuildRequires:	/usr/include/gawkapi.h, /usr/include/gawkextlib.h, postgresql-devel
-Requires:	gawk
-Requires:	postgresql-libs
-Requires(post): /sbin/install-info
-Requires(preun): /sbin/install-info
+Name:             @PACKAGE@
+Summary:          PostgreSQL client library for gawk
+Version:          @VERSION@
+Release:          1%{?dist}
+License:          GPLv3+
+
+URL:              https://sourceforge.net/projects/gawkextlib
+Source:           %{url}/files/%{name}-%{version}.tar.gz
+
+Requires:         gawk
+Requires:         postgresql-libs
+BuildRequires:    gawk-devel
+BuildRequires:    gawkextlib-devel
+BuildRequires:    postgresql-devel
+Requires(post):   info
+Requires(preun):  info
+
+# Make sure the API version is compatible with our source code:
+BuildRequires:    gawk(abi) >= 1.1
+BuildRequires:    gawk(abi) < 3.0
+
+# At runtime, the ABI must be compatible with the compile-time version
+%global gawk_api_version %(gawk 'BEGINFILE {if (ERRNO) nextfile} match($0, /#define gawk_api_(major|minor)_version[[:space:]]+([[:digit:]]+)/, f) {v[f[1]] = f[2]} END {print (v["major"] "." v["minor"])}' /usr/include/gawkapi.h)
+Requires:         gawk(abi) >= %{gawk_api_version}
+Requires:         gawk(abi) < %(echo %{gawk_api_version} | gawk -F. '{printf "%d.0\n", $1+1}')
+
+# This is the default as of Fedora 23:
+%global _hardened_build 1
 
 %description
-The gawk-pgsql package contains the gawk pgsql shared library extension
-that provides an interface to PostgreSQL database servers.
+The gawk-pgsql module provides a gawk extension library for accessing
+PostgreSQL database servers using the libpq C library API.
+
+# =============================================================================
 
 %prep
-%setup -q
+%autosetup
 
 %build
 %configure
-make %{?_smp_mflags}
+%make_build
 
 %check
 make check
 
 %install
-rm -rf %{buildroot}
-%makeinstall bindir=%{buildroot}/bin
+%make_install
 
+# The */dir file is not necessary for info pages to work correctly...
 rm -f %{buildroot}%{_infodir}/dir
 
-%find_lang %name
+# Install NLS language files:
+%find_lang %{name}
 
-%clean
-rm -rf %{buildroot}
-
+# Always update the info pages:
 %post
-if [ -f %{_infodir}/%{name}.info.gz ]; then
-    /sbin/install-info %{_infodir}/%{name}.info.gz %{_infodir}/dir || :
-fi
+/sbin/install-info %{_infodir}/%{name}.info.gz %{_infodir}/dir || :
 
 %preun
-if [ $1 = 0 -a -f %{_infodir}/%{name}.info.gz ]; then
+if [[ $1 -eq 0 ]]; then
    /sbin/install-info --delete %{_infodir}/%{name}.info.gz %{_infodir}/dir || :
 fi
 
 %files -f %{name}.lang
-%defattr(-,root,root,-)
 %license COPYING
-%doc README NEWS
+%doc NEWS
 %doc *.awk test/*.awk
 %{_infodir}/*.info*
 %{_libdir}/gawk/pgsql.so
 
+# =============================================================================
+
 %changelog
-* Sat Jul 23 2016 Andrew Schorr <ajschorr@fedoraproject.org> - @VERSION@-1
-- Rebuilt for new release
+* Sun Nov 26 2017 Andrew Schorr <ajschorr@fedoraproject.org> - @VERSION@-1
+- Update to new release and package for Fedora
 
 * Thu Oct 30 2014 Andrew Schorr <ajschorr@fedoraproject.org> - 1.0.0-1
 - Packaged as a separate rpm.
