@@ -1,3 +1,7 @@
+2017-11-26         Andrew J. Schorr     <aschorr@telemetry-investments.com>
+
+	*.po: Update.
+
 2014-11-11         Andrew J. Schorr     <aschorr@telemetry-investments.com>
 
 	*.po: Update.
